@@ -529,7 +529,27 @@
             </md>.</p>
             <p>Eigenspaces in hand, we can easily compute eigenvectors by forming nontrivial linear combinations of the basis vectors describing each eigenspace.  In particular, notice that we can <q>pretty up</q> our basis vectors by using scalar multiples to clear out fractions.</p>
         </example>
+        <example xml:id="example-UE" acro="UE">
+            <idx>
+                <h>eigenvalues</h>
+                <h>unknown</h>
+            </idx>
+            <title>Unknown eigenvalues</title>
+            <p>Consider the <m>5\times 5</m> matrix<me>
+            A = \begin{bmatrix}
+            21 &amp; -3 &amp; 42 &amp; 45 &amp; -21 \\
+            -39 &amp; 0 &amp; -80 &amp; -78 &amp; 40 \\
+            23 &amp; 1 &amp; 45 &amp; 43 &amp; -24 \\
+            -31 &amp; 0 &amp; -61 &amp; -60 &amp; 32 \\
+            6 &amp; -1 &amp; 13 &amp; 14 &amp; -6
+            \end{bmatrix}
+            </me>.</p>
+            <p>The characteristic polynomial of this matrix is <m>\charpoly{A}{x} = x^5 - 6x^3 - 27x - 3</m>.</p>
+            <p>You should know the quadratic equation for finding roots of a degree <m>2</m> polynomial.  Maybe you also have experience with the similar cubic and quartic equations.  And perhaps you have been told there is no quintic equation.  This means there are degree <m>5</m> polynomials whose roots <em>cannot</em> be expressed simply with arithmetic and taking roots (square, cube, <ellipsis/>).  This polynomial is one of them.  It <em>does</em> have five roots (three real, two complex)<mdash/>we just cannot write them down simply.  In practice we would use computer programs to find close approximations.  Finding eigenvalues can be hard.  Or impossible.</p>
+            <p>If you want to learn more about the insolvability of the quntic, take an abstract algebra course that includes Galois Theory as one of its topics.</p>
+        </example>
     </subsection>
+
     <subsection xml:id="subsection-EE-ECEE" acro="ECEE">
         <title>Examples of Computing Eigenvalues and Eigenvectors</title>
         <p>There are no theorems in this section, just a selection of examples meant to illustrate the range of possibilities for the eigenvalues and eigenvectors of a matrix.  These examples can all be done by hand, though the computation of the characteristic polynomial would be very time-consuming and error-prone.  It can also be difficult to factor an arbitrary polynomial, though if we were to suggest that most of our eigenvalues are going to be integers, then it can be easier to hunt for roots.  These examples are meant to look similar to a concatenation of <xref ref="example-CPMS3" acro="CPMS3"/>, <xref ref="example-EMS3" acro="EMS3"/> and <xref ref="example-ESMS3" acro="ESMS3"/>.  First, we will sneak in a pair of definitions so we can illustrate them throughout this sequence of examples.</p>
