@@ -41,6 +41,7 @@ New: Exercise S.M40, union of subspaces is not a subspace
 New: Theorem SID, dimensions of intersection and sum of subspaces
 New: Exercise PD.T60, alternate solution using Theorem SID
 New: Theorem ESM, formalizing an eigenvalue discussion
+New: Example UE, unknown eigenvalues
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
 Edit: Exercise IVLT.T15, streamline solution
